demo-jetty-session/gke-deploy-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jetty-session-deployment
spec:
  selector:
    matchLabels:
      app: jetty-session
  replicas: 2
  template:
    metadata:
      labels:
        app: jetty-session
    spec:
      containers:
      - name: jetty-session
        image: asia.gcr.io/first-demo-marksu-001/demo-jetty-session:2
        ports:
        - containerPort: 9080
