demo-jetty-session/gke-deploy-yaml/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: jetty-session-nodeport-service
   namespace: default
   labels:
      app: jetty-session
   annotations:
      cloud.google.com/neg: '{"ingress": true}'
spec:
   ports:
   -  protocol: TCP
      port: 8080
      targetPort: 8080
   selector:
      app: jetty-session
   type: NodePort
