demo-jetty-session/gke-deploy-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: session-ingress
spec:
   rules:
   -  http:
         paths:
         -  path: /demo-jetty-session/*
            backend:
               serviceName: jetty-session-nodeport-service
               servicePort: 8080
